# PointValueStoreClient/swagger.json
@@ -115,6 +115,10 @@
             "type": "number",
             "format": "double",
             "nullable": true
+          },
+          "stringValue": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
